Implement audio ASR and TTS pipeline

--- a/app/.env.example
+++ b/app/.env.example
@@ -37,6 +37,14 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 
+AUDIO_STORAGE_DISK=minio
+AUDIO_ASR_QUEUE=audio-asr
+AUDIO_TTS_QUEUE=audio-tts
+AUDIO_ASR_TIMEOUT=120
+AUDIO_TTS_TIMEOUT=120
+AUDIO_TTS_SAMPLE_RATE=16000
+PLAYWRIGHT_ARTIFACT_ROOT=storage/app/tmp/playwright
+
 CACHE_STORE=redis
 # CACHE_PREFIX=
 
