Add owner voice credential rotation and kill switch safeguards

--- a/app/.env.example
+++ b/app/.env.example
@@ -43,6 +43,7 @@ AUDIO_TTS_QUEUE=audio-tts
 AUDIO_ASR_TIMEOUT=120
 AUDIO_TTS_TIMEOUT=120
 AUDIO_TTS_SAMPLE_RATE=16000
+AUDIO_TTS_WORKER_CREDENTIAL_PATH=system/tts-worker-credentials.json
 PLAYWRIGHT_ARTIFACT_ROOT=storage/app/tmp/playwright
 
 CACHE_STORE=redis
