--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "artifacts:clean": "node scripts/clean-playwright-artifacts.mjs"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
