--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: npm run dev -- --host 0.0.0.0 --port 5173
+    command: pnpm run dev -- --host 0.0.0.0 --port 5173
     ports:
       - "5173:5173"
     environment:
