--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    working_dir: /var/www/html
     command: php artisan serve --host=0.0.0.0 --port=8000
     ports:
       - "8000:8000"
@@ -39,6 +40,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    working_dir: /var/www/html
     command: php artisan horizon
     environment:
       <<: *app-environment
@@ -55,6 +57,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    working_dir: /var/www/html
     command: pnpm run dev -- --host 0.0.0.0 --port 5173
     ports:
       - "5173:5173"
